--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,1 +1,2 @@
 <p>Tienda compra/venta</p>
+<a href="{{ path('home') }}">Principal</a> - <a href="{{ path('crearProducto') }}">Crear producto</a> - <a href="{{ path('misProductos') }}">Mis productos</a> - <a href="{{ path('listadoProductos') }}">Comprar</a> - <a href="{{ path('contacto') }}">Contacto</a>
